[build-system]
requires = ["setuptools>=58.0.4", "wheel>=0.36.2"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-Disease-Prediction"
version = "0.1.0"
description = "A brief description of your project"
authors = [
    { name = "Devansh Pandit", email = "devanshpandit18@gmail.com" }
]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "1.23.1"
google-generativeai = "0.1.0"
Pillow = "8.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
